# stjapi

./: pyproject.toml
examples/: 202403846967_time_1744828072.json  202500746297_time_1745099110.json  STJ18062025.sql  Testes_CriarTabelas 1.sql  Testes_CriarTabelas.sql
src/stjapi/: __init__.py  client.py  extrair.py  reader.py
