[project]
name = "stjapi"
version = "0.1.0"
description = "Coleta e organiza dados processuais da API do STJ"
readme = "README.md"
authors = [
    { name = "José", email = "jjesusfilho@gmail.com.br" }
]
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.sources]
"examples" = "examples"
